// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smokeTests OBB.EQUITY.FUNDAMENTAL.BALANCE 1 symbol 1`] = `
Result slice [0:1]: [
  [
    "period_ending",
    "fiscal_period",
    "fiscal_year",
    "filing_date",
    "accepted_date",
    "reported_currency",
    "cash_and_cash_equivalents",
    "short_term_investments",
    "cash_and_short_term_investments",
    "net_receivables",
    "inventory",
    "other_current_assets",
    "total_current_assets",
    "plant_property_equipment_net",
    "goodwill",
    "intangible_assets",
    "goodwill_and_intangible_assets",
    "long_term_investments",
    "tax_assets",
    "other_non_current_assets",
    "non_current_assets",
    "total_assets",
    "accounts_payable",
    "short_term_debt",
    "tax_payables",
    "current_deferred_revenue",
    "other_current_liabilities",
    "total_current_liabilities",
    "long_term_debt",
    "deferred_revenue_non_current",
    "deferred_tax_liabilities_non_current",
    "other_non_current_liabilities",
    "total_non_current_liabilities",
    "capital_lease_obligations",
    "total_liabilities",
    "common_stock",
    "retained_earnings",
    "accumulated_other_comprehensive_income",
    "other_total_shareholders_equity",
    "total_common_equity",
    "total_equity_non_controlling_interests",
    "total_liabilities_and_shareholders_equity",
    "total_liabilities_and_total_equity",
    "total_investments",
    "total_debt",
    "net_debt",
    "link",
    "final_link"
  ]
]
`;

exports[`smokeTests OBB.EQUITY.PRICE.HISTORICAL 1 symbol 1`] = `
Result slice [0:1]: [
  [
    "date",
    "open",
    "high",
    "low",
    "close",
    "volume",
    "vwap",
    "adj_close",
    "change",
    "change_percent"
  ]
]
`;

exports[`smokeTests OBB.EQUITY.PRICE.HISTORICAL 2+ symbols 1`] = `
Result slice [0:1]: [
  [
    "date",
    "open",
    "high",
    "low",
    "close",
    "volume",
    "vwap",
    "symbol",
    "adj_close",
    "change",
    "change_percent"
  ]
]
`;

exports[`smokeTests OBB.EQUITY.PRICE.HISTORICAL dates + provider 1`] = `
Result slice [0:1]: [
  [
    "date",
    "open",
    "high",
    "low",
    "close",
    "volume",
    "vwap",
    "adj_close",
    "change",
    "change_percent"
  ]
]
`;

exports[`smokeTests OBB.GET Empty 1`] = `Result slice [0:1]: []`;

exports[`smokeTests OBB.GET Full 1`] = `
Result slice [0:1]: [
  [
    "date",
    "open",
    "high",
    "low",
    "close",
    "volume"
  ]
]
`;

exports[`smokeTests OBB.GET Partial 1`] = `
Result slice [0:1]: [
  [
    2,
    100
  ]
]
`;
